# arize-mcp

./: .env.example  CLAUDE.md  README.md  pyproject.toml  test_credentials.py
src/arize_mcp/: __init__.py  client.py  config.py  graphql.py  rest_client.py  server.py
src/arize_mcp/tools/: __init__.py  analysis.py  datasets.py  models.py  traces.py
tests/: __init__.py  conftest.py  test_config.py  test_rest_client.py  test_server.py  test_tools_analysis.py  test_tools_datasets.py  test_tools_models.py  test_tools_traces.py
